[package]
name = "diesel_eshop_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_postgres_pool"]}
rocket_db_pools = { version = "0.1.0-rc", features = ["deadpool_redis"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres"] }
chrono = {version = "0.4", features = ["serde"] }
dotenvy = "0.15"
bigdecimal = "0.2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"]}